--- a/index.html
+++ b/index.html
@@ -2,16 +2,68 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>https://ky077.github.io/website/</title>
-	<style>
-		.block{
-			padding: 30px;
-		}
-	</style>
+<title>全方位中文</title>
+<style>
+body {
+	font-size: 20px;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+	padding: 0;
+	margin: 0 auto;
+	width: 100%;
+	max-width: 960px;
+}
+table th, table td {
+	border: 1px solid #ccc;
+	text-align: center;
+	padding: 15px;
+}
+table th {
+	background-color: #ddd;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+table tfoot td {
+	background-color: #333;
+	color: #FFF;
+}
+table tfoot td a {
+	color: #FFF;
+}
+a {
+	text-underline-offset: 4px;
+}
+</style>
 </head>
 
 <body>
-	<div class="block"><a target="_blank" href="https://ky077.github.io/website/careerInfo/index.html">讚生涯高中生生涯資訊系統</a></div>
-	<div class="block"><a target="_blank" href="https://ky077.github.io/website/SR/index.html">SmartReading 適性閱讀</a></div>
+<table>
+  <thead>
+    <tr>
+      <th>名稱</th>
+      <th>DEMO網頁</th>
+      <th>線上網址</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>SmartReading(官網)</td>
+      <td><a href="SR/index.html" target="_blank">DEMO</a></td>
+      <td><a href="https://smartreading.net/" target="_blank">線上</a></td>
+    </tr>
+	<tr>
+      <td> [科普賽]第六屆參賽證明</td>
+      <td><a href="SRcontest/contest6-paper.html" target="_blank">DEMO</a></td>
+      <td></td>
+    </tr>  
+    <tr>
+      <td>SR教師端 (未完成，未上線)</td>
+      <td><a href="SCkids/index.html" target="_blank">DEMO</a></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
