--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ a {
     </tr>  
     <tr>
       <td>SR教師端 (未完成，未上線)</td>
-      <td><a href="SCkids/index.html" target="_blank">DEMO</a></td>
+      <td><a href="SRteacher/index.html" target="_blank">DEMO</a></td>
       <td></td>
     </tr>
   </tbody>
