--- a/SRteacher/master_sidebar.html
+++ b/SRteacher/master_sidebar.html
@@ -13,7 +13,7 @@
   <!-- -->
     <li class="nav-item SR-sidebar-title"><img src="Content/images/icon-scroll.png" alt="icon-scroll"/>教學閱讀計畫設定</li>
     <li class="nav-item"> <a class="nav-link" href="RP-bookList-teaching.html">教學書單管理</a> </li>
-    <li class="nav-item"> <a class="nav-link" href="RP-proposition.html">教師命題管理</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="RP-quiz.html">教師命題管理</a> </li>
     <li class="nav-item"> <a class="nav-link" href="RP-manage.html">閱讀計畫管理</a></li>
     <li class="nav-item"> <a class="nav-link" data-bs-toggle="collapse" href="#RP-skill" role="button" aria-expanded="false" aria-controls="RP-skill">閱讀力管理</a> 
 	  <ul class="collapse" id="RP-skill">
