--- a/SR/login.html
+++ b/SR/login.html
@@ -145,7 +145,7 @@
                       </div>
                       <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
-                          <button type="submit" class="btn btn-main btn-block login-panel__btn" onClick="window.location='./DACC/DACC.html'">登入</button>
+                          <a role="button" class="btn btn-main btn-block login-panel__btn" href="DACC/DACC.html">登入</a>
                         </div>
                       </div>
                     </div>
