--- a/SRteacher/RP-courseActivity.html
+++ b/SRteacher/RP-courseActivity.html
@@ -207,7 +207,7 @@ $(document).ready(function() {
 		searching: true,
 		pageLength: 10,
 		pagingType: "simple_numbers",
-        dom: '<r<"table-responsive"t>>'+
+        dom: '<"table-responsive"rt>'+
 			 '<"datatables-custom-footer clearfix"pi>',
         language: {
           url: 'Content/widgets/DataTables/lang/Chinese-traditional.json'
