--- a/SR/index.html
+++ b/SR/index.html
@@ -106,18 +106,19 @@
         <li data-target="#carousel-index-banner" data-slide-to="3"></li>
         <li data-target="#carousel-index-banner" data-slide-to="4"></li>
         <li data-target="#carousel-index-banner" data-slide-to="5"></li>
+		<li data-target="#carousel-index-banner" data-slide-to="6"></li>  
       </ol>
       <div class="carousel-inner" role="listbox"> 
         <!--圖片大小：1920x720-->
-        <div class="item active"><a href="https://cltc.ntnu.edu.tw/news?id=64d1d938b05b3514944034e5" target="_blank"> <img src="Content/images/index/banner-bg-a1.jpg" class="img-responsive center-block" alt="SmartReading線上直播講座系列"></a></div>
-        <div class="item"> <img src="Content/images/index/banner-bg-a2.jpg" class="img-responsive center-block" alt="SmartReading閱讀分級 優選推薦好書"> </div>
-        <div class="item"> <img src="Content/images/index/banner-bg-a3.jpg" class="img-responsive center-block" alt="智慧閱讀三步驟 培養自律自主的閱讀者! "> </div>
-        <div class="item"> <img src="Content/images/index/banner-bg-1.jpg" class="img-responsive center-block" alt="透過適性閱讀，培養自律自主的閱讀者！"> </div>
-        <div class="item"> <img src="Content/images/index/banner-bg-2.jpg" class="img-responsive center-block" alt="陪伴孩子規劃閱讀進度，為孩子找到一本適合他的書"> </div>
-        <div class="item"> <img src="Content/images/index/banner-bg-3.jpg" class="img-responsive center-block" alt="AIx大數據 x閱讀_新世代的閱讀教學平台為你帶來學習新策略"> </div>
-        <!--<div class="item">
-          <a href="#可設連結，也可不設(拿掉<a>)"><img src="https://api.fnkr.net/testimg/1920x720/43a047/FFF/?text=1920x720" class="img-responsive center-block" alt=""></a>
-        </div>--> 
+        <div class="item active"><img src="https://smartreading.net/v3/Content/images/index/banner-bg-202511_1.jpg" class="img-responsive center-block" alt=""></div>
+        <div class="item"> <img src="https://smartreading.net/v3/Content/images/index/banner-bg-202511_5.jpg" class="img-responsive center-block" alt=""> </div>
+        <div class="item"> <img src="https://smartreading.net/v3/Content/images/index/banner-bg-202511_2.jpg" class="img-responsive center-block" alt=""> </div>
+        <div class="item"> <img src="https://smartreading.net/v3/Content/images/index/banner-bg-202511_3.jpg" class="img-responsive center-block" alt=""> </div>
+        <div class="item"> <img src="https://smartreading.net/v3/Content/images/index/banner-bg-202511_4.jpg" class="img-responsive center-block" alt=""> </div>
+        <div class="item"> <a href="https://www.sdc.org.tw/product-category/%E6%95%B8%E4%BD%8D%E5%85%A7%E5%AE%B9/?product_tag_0=%E5%9C%8B%E7%AB%8B%E8%87%BA%E7%81%A3%E5%B8%AB%E7%AF%84%E5%A4%A7%E5%AD%B8&wpf_fbv=1" target="_blank"><img src="https://smartreading.net/v3/Content/images/index/banner-bg-20240931.jpg" class="img-responsive center-block" alt=""> </a></div>
+        <div class="item">
+          <a href="https://ntpc.smartreading.net/v3/ntpc/index.aspx" target="_blank"><img src="https://smartreading.net/v3/Content/images/index/banner-bg-202405-1.jpg" class="img-responsive center-block" alt=""></a>
+        </div> 
       </div>
       <a class="left carousel-control" href="#carousel-index-banner" role="button" data-slide="prev"><img src="Content/images/index/banner-prev.png" width="58" height="94" alt="上一張"></a> <a class="right carousel-control" href="#carousel-index-banner" role="button" data-slide="next"><img src="Content/images/index/banner-next.png" width="58" height="94" alt="下一張"></a> </div>
   </div>
