--- a/SRteacher/RP-bookList-class.html
+++ b/SRteacher/RP-bookList-class.html
@@ -106,7 +106,22 @@
       </div>
     </div>
   </div>
-  <!-- Modal#studentRPModal 學生閱讀計畫[檢視]  end  -->
+  <!-- Modal#studentRPModal 學生閱讀計畫[檢視]  end  --> 
+  
+  <!-- Modal#reviewModal 學生閱讀計畫[批閱] start -->
+  <div class="modal fade modal-review" id="reviewModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content rounded-0">
+        <div class="modal-header">
+          <button type="button" class="btn-close float-start" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="load-body">...</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal#reviewModal [批閱]  end  -->
   
   <footer> </footer>
 </form>
@@ -117,6 +132,7 @@
 
 <!-- widgets JS --> 
 <script src="Content/js/bootstrap.bundle.min.js"></script> 
+<script src="Content/js/doubleScorollbar.js"></script> 	
 <script src="Content/widgets/DataTables/datatables.min.js"></script> 
 <script src="Content/widgets/DataTables/buttons-2.4.2/js/dataTables.buttons.min.js"></script> 
 <script src="Content/widgets/DataTables/buttons-2.4.2/js/buttons.html5.min.js"></script> 
