--- a/SRteacher/RP-manage.html
+++ b/SRteacher/RP-manage.html
@@ -242,8 +242,8 @@
       </div>
     </div>
   </div>
-  <!-- Modal#studentRPModal 學生閱讀計畫[查看]  end  -->
-	
+  <!-- Modal#studentRPModal 學生閱讀計畫[查看]  end  --> 
+  
   <!-- Modal#superBoardModal 金榜星星數[計分方式>>][詳情>>] start -->
   <div class="modal fade modal-superBoard" id="superBoardModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="superBoardModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
@@ -252,12 +252,27 @@
           <button type="button" class="btn-close float-start" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <div class="load-body">...</div>
+          <div class="load-body">...</div>
         </div>
       </div>
     </div>
   </div>
-  <!-- Modal#superBoardModal 金榜星星數[計分方式>>][詳情>>]   end  -->	
+  <!-- Modal#superBoardModal 金榜星星數[計分方式>>][詳情>>]   end  --> 
+  
+  <!-- Modal#reviewModal 學生閱讀計畫[批閱] start -->
+  <div class="modal fade modal-review" id="reviewModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content rounded-0">
+        <div class="modal-header">
+          <button type="button" class="btn-close float-start" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="load-body">...</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal#reviewModal [批閱]  end  -->
   
   <footer> </footer>
 </form>
@@ -371,7 +386,7 @@ $(document).ready(function() {
 	});
 }); 	
 </script> 
-	
+
 <!-- 班級閱讀計畫 --> 
 <script>
 function loadClassRPTable() { 
