--- a/SRteacher/studentRP.html
+++ b/SRteacher/studentRP.html
@@ -449,9 +449,8 @@
 		$('#reviewModal').modal('show')
 						 .find('.modal-body .load-body')
 						 .load('fillAssessment-bySystem-teacherRating.html', function () {
-								//do something... (載入學生作答
-								//                 若有系統評分須出現系統分數
-								//                 若老師評分過，載入老師評分)
+								//do something... (載入學生作答。
+								//                 若老師評分過，載入老師評分資料)
 							 });
 	});
 	
@@ -460,8 +459,7 @@
 		$('#reviewModal').modal('show')
 							 .find('.modal-body .load-body')
 							 .load('fillAssessment-byTeacher-teacherRating.html', function () {
-								//do something... (載入學生作答
-								//                 若有系統評分須出現系統分數
+								//do something... (載入學生作答。
 								//                 若老師評分過，載入老師評分)
 							 });
 	});	
