--- a/SRteacher/RP-skill-portfolio.html
+++ b/SRteacher/RP-skill-portfolio.html
@@ -159,7 +159,7 @@
           <div class="d-flex justify-content-center align-items-center mb-4"><span class="text-red fs-7">尚未填寫教師回饋！</span>
             <button type="button" class="btn btn-link">立即填寫&gt;&gt;</button>
           </div>
-		  <a class="course-paper__float-download fixed" type="button"><span class="float-download__img"></span>下載PDF</a>
+		  <a class="btn btn-link btn-float-download" type="button"><span class="btn-float-img"></span>下載PDF</a>
           <div class="load-body"></div>
           <div class="text-center mb-3">
             <button type="button" class="btn btn-primary rounded-0">送出回饋</button>
