--- a/SRteacher/RP-skill-portfolio.html
+++ b/SRteacher/RP-skill-portfolio.html
@@ -386,7 +386,7 @@ $(document).ready(function() {
 
 			// ② 填入 textarea + 送出按鈕
 			$block.append(`
-				<textarea class="form-control rounded-0 m-n3" rows="4" placeholder="請輸入教師回饋"></textarea>
+				<textarea class="form-control" rows="4" placeholder="請輸入教師回饋"></textarea>
 			`);
 			
 			$('#feedbackConfirm').show();
