--- a/SRteacher/master_sidebar.html
+++ b/SRteacher/master_sidebar.html
@@ -17,7 +17,7 @@
     <li class="nav-item"> <a class="nav-link" href="RP-manage.html">閱讀計畫管理</a></li>
     <li class="nav-item"> <a class="nav-link" data-bs-toggle="collapse" href="#RP-skill" role="button" aria-expanded="false" aria-controls="RP-skill">閱讀力管理</a> 
 	  <ul class="collapse" id="RP-skill">
-        <li class="nav-item"><a class="nav-link" href="RP-skill-perf.html">閱讀力表現</a></li>
+        <li class="nav-item"><a class="nav-link" href="RP-skill-performance.html">閱讀力表現</a></li>
         <li class="nav-item"><a class="nav-link" href="RP-skill-portfolio.html">學習歷程檔案管理</a></li>
       </ul>
 	  </li>
