--- a/SRteacher/DACC-schoolReport-class.html
+++ b/SRteacher/DACC-schoolReport-class.html
@@ -33,8 +33,8 @@
       <!-- 學生資訊/班級資訊-頁籤 start -->
       <div class="row">
         <ul class="nav nav-tabs">
-          <li class="nav-item"> <a class="nav-link active" aria-current="page" href="DACC-schoolReport-student.html">學生資訊</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="DACC-schoolReport-class.html">班級資訊</a> </li>
+          <li class="nav-item"> <a class="nav-link" aria-current="page" href="DACC-schoolReport-student.html">學生資訊</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="DACC-schoolReport-class.html">班級資訊</a> </li>
         </ul>
       </div>
       <!-- 學生資訊/班級資訊-頁籤 end  --> 
@@ -167,6 +167,11 @@
 <script src="Content/widgets/DataTables/buttons-2.4.2/js/buttons.html5.min.js"></script> 
 <script src="Content/widgets/DataTables/buttons-2.4.2/js/buttons.print.min.js"></script> 
 <script src="Content/widgets/bootstrap-select-1.14.0-beta3/dist/js/bootstrap-select.min.js"></script> 
+
+<!-- chart.js --> 
+<script src="Content/widgets/Chart.js-master/chart.js"></script>
+<script src="Content/widgets/Chart.js-master/chart.umd.min.js"></script>
+<script src="Content/widgets/Chart.js-master/index.umd.min.js"></script>
 
 <!-- my JS --> 
 <script src="Content/js/main.js"></script> 
