--- a/SRteacher/RP-bookList-class.html
+++ b/SRteacher/RP-bookList-class.html
@@ -108,7 +108,7 @@
   </div>
   <!-- Modal#studentRPModal 學生閱讀計畫[檢視]  end  --> 
   
-  <!-- Modal#reviewModal 學生閱讀計畫[批閱] start -->
+  <!-- Modal#reviewModal 學生閱讀計畫[批閱]  系統題本/教師命題/我的書房 start -->
   <div class="modal fade modal-review" id="reviewModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content rounded-0">
@@ -121,7 +121,7 @@
       </div>
     </div>
   </div>
-  <!-- Modal#reviewModal [批閱]  end  -->
+  <!-- Modal#reviewModal 學生閱讀計畫[批閱]  系統題本/教師命題/我的書房  end  -->
   
   <footer> </footer>
 </form>
