--- a/SRteacher/RP-manage.html
+++ b/SRteacher/RP-manage.html
@@ -259,7 +259,7 @@
   </div>
   <!-- Modal#superBoardModal 金榜星星數[計分方式>>][詳情>>]   end  --> 
   
-  <!-- Modal#reviewModal 學生閱讀計畫[批閱] start -->
+  <!-- Modal#reviewModal 閱讀計畫[查看]  系統題本/教師命題/我的書房 start -->
   <div class="modal fade modal-review" id="reviewModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
       <div class="modal-content rounded-0">
@@ -272,7 +272,7 @@
       </div>
     </div>
   </div>
-  <!-- Modal#reviewModal [批閱]  end  -->
+  <!-- Modal#reviewModal 閱讀計畫[查看]  系統題本/教師命題/我的書房  end  -->
   
   <footer> </footer>
 </form>
